build/errors/testdata/invalid-type-field-assign.q
struct Point {
	x Int32
	y Int64
}

main() {
	let p = Point()
	p.x = p.y
}
